test/files/neg/t1112.check
t1112.scala:12: error: too many arguments for method call: (p: Int)(f: => () => Unit)Unit
    call(0,() => System.out.println("here we are"))
        ^
one error found
